# fragula

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: fragment.glsl
src/: fragment.glsl  main.rs  render.rs  shader.rs  texture.rs  transformations.rs  vertex.glsl  vertex.rs  watch.rs  wavefront.rs
