[package]
name = "fragula"
version = "0.1.0"
authors = ["mandeep <mandeep@users.noreply.github.com>"]
license = "Apache-2.0"
edition = "2018"
description = "View shaders in real-time"
homepage = "https://github.com/mandeep/fragula"
documentation = "https://github.com/mandeep/fragula"
repository = "https://github.com/mandeep/fragula"

[dependencies]
cgmath = "0.17.0"
crossbeam-channel = "0.3.8"
luminance = "0.37.1"
luminance-glfw = "0.11.0"
luminance-derive = "0.5"
glsl = "1.2.0"
notify = "5.0.0-pre.1"
try-guard = "0.2.0"
wavefront_obj = "7.0.0"
