[package]
name = "fragula"
version = "0.11.2"
authors = ["mandeep <mandeep@users.noreply.github.com>"]
license = "Apache-2.0"
edition = "2021"
description = "View shaders in real-time"
homepage = "https://github.com/mandeep/fragula"
documentation = "https://github.com/mandeep/fragula"
repository = "https://github.com/mandeep/fragula"
readme = "README.md"

[dependencies]
cgmath = "0.17.0"
clap = "2.33"
crossbeam-channel = "0.3"
image = "0.23"
luminance = "0.39"
luminance-glfw = "0.12"
luminance-derive = "0.5"
glsl = "6.0"
notify = "=5.0.0-pre.1"
try-guard = "0.2"
wavefront_obj = "10.0"

[target.'cfg(windows)'.dependencies]
cmake = "0.1.50"

[profile.release]
lto = true
